--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -41,6 +41,7 @@ body {
     sans-serif;
   color: #636363;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 h1,
